Getting SQL Connection String from appsettings

--- a/GraphQLPoc.Api/appsettings.json
+++ b/GraphQLPoc.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PocGraphqlDBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PocGraphqlDB;Integrated Security = True"
+  }
 }
